since version 1.0.6
-------------------
* support for rotated pole transormation (projection = 'rotpole').
* fix warpimage with projection = 'hammer' (issue 100).

version 1.0.6 (git tag v1.0.6rel)
--------------------------------
* fix drawcounties for Python 3.3.
* update pyproj to version 1.9.3 (remove geographiclib python code, replace
  with C code from proj4).
* in contourf and contour, all points outside the map projection
  region were masked. This meant that if a grid cell was partly inside and partly 
  outside the map projection region, nothing was drawn, leaving a gap along the
  edge of the map. This was particularly noticeable for very coarse resolution grids.
  This commit only masks those points more than one grid length beyond the edge
  of the map projection region.  Fixes issue 88.
* allow for latitude values slightly greater than 90 to exist in shapefiles,
  (by truncating to 90).  Still raise exception if latitude exceeds 90.01.
* added 'wmsimage' method for displaying background image retrieved from
  a OGC-compliant WMS server using OWSLib (http://pypi.python.org/OWSLib)
  (requires using 'epsg' keyword to define projection).
* fix drawing of meridians and parallels for very small map regions
  (issue 79).
* add module variable 'latlon_default' that can be used to switch 
  default value of latlon kwarg to True so plotting methods can be 
  passed lats and lons (geographic coordinatsin degrees) instead
  of x,y (projection coordinates).
* have drawcoastlines use line segments instead of coastline polygons, to
  avoid 'thickening' of lines around edges of map.
* added support for cylindrical equal area ('cea') projection.
* add 'arcgisimage' method for displaying background image retrieved from
  an ArcGIS server using the REST API
  (requires using 'epsg' keyword to define projection).
* add 'epsg' keyword for defining projections.
* add 'ellps' keyword (rsphere ignored if ellps given).